--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,33 @@ stop-words
 joblib
 scikit-learn
 google_play_scraper
+# PyTorch (CPU-only) y sus utilidades
+torch==1.13.1+cpu
+torchvision==0.14.1+cpu
+torchaudio==0.13.1+cpu
+-f https://download.pytorch.org/whl/cpu/torch_stable.html
+
+# Transformers para embeddings (compatible con CPU)
+transformers==4.30.2
+
+# BERTopic y sus dependencias
+bertopic==0.13.1
+umap-learn==0.5.3
+hdbscan==0.8.29
+
+# Scikit-learn y Joblib (compatibles con BERTopic)
+scikit-learn==1.2.2
+joblib==1.2.0
+
+# Numpy y Pandas (versiones estables para Lambda)
+numpy==1.23.5
+pandas==1.5.3
+
+# Resto de librerías (sin pin o con la última compatible)
+streamlit
+boto3
+altair
+plotly
+streamlit-aggrid
+wordcloud
+google-play-scraper==0.9.0
