--- a/requirements.txt
+++ b/requirements.txt
@@ -1,49 +1,8 @@
-# -------------------------------------------------------
-# requirements.txt con versiones exactas
-# -------------------------------------------------------
-
-# PyTorch (+CPU builds): indicamos el índice para wheels de CPU
--f https://download.pytorch.org/whl/cu121
-
-torch==2.1.0
-torchvision==0.16.0
-torchaudio==2.1.0
-
-# BERTopic y sus dependencias
 bertopic==0.17.0
-umap-learn==0.5.2
-hdbscan==0.8.32
 sentence-transformers==4.1.0
-
-# Utilidades de ML/NLP
-scikit-learn==1.2.2
-joblib==1.5.0
-numpy==1.25.2
-pandas==2.1.4
-
-# AWS / Visualización / Streaming
-boto3==1.35.99
-streamlit==1.24.1
-altair==5.0.1
-plotly==6.0.1
-streamlit-aggrid==0.4.5
-wordcloud==1.9.2
-
-# Stop-words y scraping de Google Play
-stop-words==2018.7.23
 google-play-scraper==1.2.7
-
-# Dependencias internas requeridas por BERTopic/HDBSCAN/sentence-transformers
-transformers==4.52.4
-tokenizers==0.21.1
-huggingface-hub==0.32.3
-pynndescent==0.5.13
-numba==0.61.2
-llvmlite==0.44.0
-
-# -------------------------------------------------------
-# Herramientas básicas de empaquetado
-# -------------------------------------------------------
-pip==23.0.1
-setuptools==65.5.0
-wheel==0.45.1
+stop-words==2018.7.23
+#torch copia 
+#pip install --upgrade torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu121
+#import torch
+#print(torch.__version__)
